# usdc-portfolio-mcp-server

./: .gitignore  manifest.yaml  pyproject.toml  requirements.txt
src/portfolio/: app.py  main.py  utils.py
